Finalize v1 catalog UI and data workflow

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Hoard</title>
+  <title>SafraBr</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>Hoard</h1>
+    <h1>SafraBr</h1>
+    <p class="subtitle">Catálogo de Itens do Farming and Friends</p>
 
     <div class="controls">
       <input type="text" id="searchInput" placeholder="Buscar item...">
