Finalize public theme responsiveness and footer credit

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Hoard - SafraBr by VoZona</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hoard SafraBr</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Hoard - SafraBr</h1>
+    <h1>Hoard SafraBr</h1>
     <p class="subtitle" data-i18n="subtitle">Catalogo de Itens do Farming and Friends</p>
 
     <div class="controls">
@@ -37,6 +38,11 @@
   <main>
     <div id="itemsContainer" class="items-grid"></div>
   </main>
+
+  <footer class="site-footer">
+    <span data-i18n="footerCreditPrefix">Feito por</span>
+    <a href="https://www.roblox.com/pt/catalog?taxonomy=tZsUsd2BqGViQrJ9Vs3Wah&CreatorName=The_TerminaDO&CreatorType=User&salesTypeFilter=1" target="_blank" rel="noopener noreferrer">VoZona</a>
+  </footer>
 
   <script src="script.js"></script>
 </body>
