Refine catalog UX and adapt item metrics to speed ranges

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <a href="https://www.roblox.com/pt/catalog?taxonomy=tZsUsd2BqGViQrJ9Vs3Wah&CreatorName=The_TerminaDO&CreatorType=User&salesTypeFilter=1" target="_blank" rel="noopener noreferrer">VoZona</a>
   </footer>
 
+  <button id="backToTopBtn" class="back-to-top" type="button" aria-label="Voltar ao topo" title="Voltar ao topo">↑</button>
+
   <script src="script.js"></script>
 </body>
 </html>
