Checkpoint before data payload obfuscation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="controls">
       <div class="controls-search">
         <input type="text" id="searchInput" placeholder="Buscar item..." data-i18n-placeholder="searchPlaceholder">
+        <button id="clearSearchBtn" class="clear-search-btn" type="button" aria-label="Limpar busca" title="Limpar busca">×</button>
       </div>
 
       <div class="controls-filters">
