--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         </select>
       </div>
     </div>
+
   </header>
 
   <main>
     <div class="content-wrap">
+      <p id="resultsCount" class="results-count" aria-live="polite"></p>
       <div id="itemsContainer" class="items-grid"></div>
     </div>
   </main>
