Refine card UX and fix translated category display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="controls">
       <div class="controls-search">
         <input type="text" id="searchInput" placeholder="Buscar item..." data-i18n-placeholder="searchPlaceholder">
-        <button id="clearSearchBtn" class="clear-search-btn" type="button" aria-label="Limpar busca" title="Limpar busca">Ã—</button>
+        <button id="clearSearchBtn" class="clear-search-btn" type="button" aria-label="Limpar busca" title="Limpar busca">&times;</button>
       </div>
 
       <div class="controls-filters">
@@ -46,7 +46,6 @@
         </select>
       </div>
     </div>
-
   </header>
 
   <main>
@@ -61,7 +60,7 @@
     <a href="https://www.roblox.com/pt/catalog?taxonomy=tZsUsd2BqGViQrJ9Vs3Wah&CreatorName=The_TerminaDO&CreatorType=User&salesTypeFilter=1" target="_blank" rel="noopener noreferrer">VoZona</a>
   </footer>
 
-  <button id="backToTopBtn" class="back-to-top" type="button" aria-label="Voltar ao topo" title="Voltar ao topo">â†‘</button>
+  <button id="backToTopBtn" class="back-to-top" type="button" aria-label="Voltar ao topo" title="Voltar ao topo">&uarr;</button>
 
   <script src="script.js"></script>
 </body>
