Update catalog data, assets, and default special-items view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="controls-filters">
         <select id="categoryFilter">
           <option value="All" data-category-key="All">Todas as categorias</option>
-          <option value="TreeCutters" data-category-key="TreeCutters">Cortadores de Arvores</option>
+          <option value="TreeCutters" data-category-key="TreeCutters">Cortadores de Árvores</option>
           <option value="Tractors" data-category-key="Tractors">Tratores</option>
           <option value="Plows" data-category-key="Plows">Arados</option>
           <option value="Cultivators" data-category-key="Cultivators">Cultivadores</option>
@@ -36,7 +36,7 @@
         </select>
 
         <label class="filter-toggle" for="specialFilter">
-          <input type="checkbox" id="specialFilter">
+          <input type="checkbox" id="specialFilter" checked>
           <span data-i18n="specialOnlyLabel">Somente especiais</span>
         </label>
 
